--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://sql10.freemysqlhosting.net:3306/sql10523985
-spring.datasource.username=sql10523985
-spring.datasource.password=ncsl4MwuH4
+spring.datasource.url=jdbc:mysql://us-cdbr-east-06.cleardb.net:3306/heroku_22076e2512e3ee7
+spring.datasource.username=b1997bada7a877
+spring.datasource.password=42e6f5a9
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.use-new-id-generator-mappings=true
