--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,13 @@
+#DATABASE HEROKU
 spring.datasource.url=jdbc:mysql://us-cdbr-east-06.cleardb.net:3306/heroku_22076e2512e3ee7
 spring.datasource.username=b1997bada7a877
 spring.datasource.password=42e6f5a9
+
+#DATABASE LOCAL
+#spring.datasource.url=jdbc:mysql://localhost:3306/kisaragi_core
+#spring.datasource.username=root
+#spring.datasource.password=
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.use-new-id-generator-mappings=true
@@ -9,3 +16,5 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = true
 server.port = 8090
+
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
