--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.jpa.show-sql = true
 server.port = 8090
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+
+management.endpoints.web.exposure.include = health, info, metrics, prometheus, beans, env, loggers, flyway
